frontend/test/should_fail/index_count_fromto_argument_mismatch.grg
#using "index_count_model.gm"

rule i {
	if{ countNodesFromIndexFromTo(fooi, "mismachting-string", 42.0) > 0; }
	
	modify {
	}
}
